Descript about myself and Text alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -104,15 +104,16 @@ body{
 }
 
 .home p{
-    font-size: 16px;
+    font-size: 18px;
     opacity: 0;
+    margin-right: 20px;
     animation: slideLeft 1s ease forwards;
     animation-delay: 1s;
 }
 
 .home-img img{
-    max-width: 300px;
-    margin-right: -20px;
+    max-width: 350px;
+    margin-right: -24px;
     border: 2px solid var(--main-color);
     border-radius: 50%;
     box-shadow: 0px 5px 20px var(--main-color);
